--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <activity android:name=".LoginActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".ChatlistActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
