--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
         <activity android:name=".SearchActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".ItemActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
