--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,12 @@
         <activity android:name=".BookInsertActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".DetailBookDataActivity"
+            android:exported="true">
+        </activity>
+        <activity android:name=".ChatRoomActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
