--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,12 @@
         <activity android:name=".ChatRoomActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".SearchBookActivity"
+            android:exported="true">
+        </activity>
+        <activity android:name=".SearchActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
